--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "description": "Open Genspark AI Browser - Local web scraping and agent automation",
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev -p 1470",
+    "electron-dev": "concurrently \"pnpm run dev\" \"wait-on http://localhost:1470 && electron .\"",
+    "electron-build": "next build && electron-builder",
     "docker:build": "docker build -t genspark-ai-browser:latest .",
     "docker:compose:down": "docker-compose down",
     "docker:compose:up": "docker-compose up -d",
     "docker:logs": "docker-compose logs -f app",
-    "docker:run": "docker run -p 3000:3000 genspark-ai-browser:latest",
+    "docker:run": "docker run -p 1470:1470 genspark-ai-browser:latest",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start -p 1470"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "latest",
     "@google/generative-ai": "latest",
     "@hookform/resolvers": "^3.10.0",
+    "@mlc-ai/web-llm": "^0.2.79",
     "@neondatabase/serverless": "latest",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
@@ -81,9 +84,13 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.2.1",
+    "electron": "^39.2.3",
+    "electron-builder": "^26.0.12",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wait-on": "^9.0.3"
   }
 }
